--- a/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
+++ b/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
@@ -225,6 +225,57 @@
                                     <outlet property="usernameLabel" destination="ROY-S8-jtB" id="i1f-At-5ck"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="avatarCell" rowHeight="66" id="Gq3-sf-gAb" customClass="BCHDWAvatarTableViewCell">
+                                <rect key="frame" x="0.0" y="228" width="375" height="66"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gq3-sf-gAb" id="mlK-bJ-2Eg">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kia-B1-vV5">
+                                            <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="917-vh-Hbk"/>
+                                                <constraint firstAttribute="height" constant="50" id="uyS-wh-vPl"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFp-Zu-iZg">
+                                            <rect key="frame" x="66" y="22" width="309" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="kia-B1-vV5" firstAttribute="centerY" secondItem="mlK-bJ-2Eg" secondAttribute="centerY" id="B9l-Md-8fW"/>
+                                        <constraint firstItem="zFp-Zu-iZg" firstAttribute="centerY" secondItem="mlK-bJ-2Eg" secondAttribute="centerY" id="Sb3-E8-s9Q"/>
+                                        <constraint firstItem="zFp-Zu-iZg" firstAttribute="leading" secondItem="kia-B1-vV5" secondAttribute="trailing" constant="8" id="eeX-vg-aQz"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="zFp-Zu-iZg" secondAttribute="trailingMargin" id="fPg-I1-oSH"/>
+                                        <constraint firstItem="kia-B1-vV5" firstAttribute="leading" secondItem="mlK-bJ-2Eg" secondAttribute="leadingMargin" id="ugz-f3-FpS"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="avatarImageView" destination="kia-B1-vV5" id="NYt-kc-fPM"/>
+                                    <outlet property="avatarKeywordsLabel" destination="zFp-Zu-iZg" id="mwX-cl-Hgj"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="moreCell" textLabel="wGF-BX-uNt" style="IBUITableViewCellStyleDefault" id="miS-kA-8Sj">
+                                <rect key="frame" x="0.0" y="294" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="miS-kA-8Sj" id="4pP-qK-Ph6">
+                                    <rect key="frame" x="0.0" y="0.0" width="342" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="More..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wGF-BX-uNt">
+                                            <rect key="frame" x="15" y="0.0" width="325" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="tQ0-pr-tjX" id="Vfv-0Y-Xnt"/>
